yaml_parser/tests/fail/invalid-sequene-item-on-same-line-as-previous-item.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 11
  |
2 | - { y: z }- invalid
  |           ^
expected `...`
